# litellm

./: .env.example  .gitignore  CUSTOMCHANGES.md  Makefile  README_kr.md  Stream Conversion Feature.md  config.yaml  cursor_poetry_uv.md  custom_jwt_auth.py  docker-compose.redis.yml  docker-compose.yml  litellm_architecture.md  pyproject.toml  reproduce_leak.py  walkthrough_kr.md
customs/: config.yaml  custom_auth_handler.py  custom_jwt_auth.py
deploy/charts/litellm-helm/: values.yaml
deploy/migrations/20250627041049_initial/: README.md
deploy/migrations/20250627041055_schema_update/: README.md
deploy/migrations/20250709101240_initial/: README.md
deploy/migrations/20250709101250_schema_update/: README.md
deploy/migrations/20250713092127_schema_update/: README.md
deploy/migrations/20250726055651_schema_update/: README.md
deploy/migrations/20250803060151_schema_update/: README.md
deploy/migrations/20250919121919_initial/: README.md
deploy/migrations/20250919121932_schema_update/: README.md
deploy/migrations/20250927140245_initial/: README.md
deploy/migrations/20250927140256_schema_update/: README.md
deploy/migrations/20251012022935_schema_update/: README.md
deploy/migrations/20251024085305_schema_update/: README.md
deploy/migrations/20251101120323_initial/: README.md
deploy/migrations/20251101120335_schema_update/: README.md
deploy/migrations/20251120135817_initial/: README.md
deploy/migrations/20251120135826_schema_update/: README.md
deploy/migrations/20251206143245_schema_update/: README.md
deploy/migrations/20260108224639_schema_update/: README.md
docs/: stream_memory_leak_fix_implementation_plan_kr.md  stream_memory_leak_fix_task_kr.md  stream_memory_leak_fix_walkthrough_kr.md
docs/custom/file-server-callback/: analysis_langfuse_file_dump.md  implementation_plan.md  task.md  walkthrough.md
docs/my-website/docs/proxy/: config_settings.md  ip_address.md
litellm/: __init__.py  router.py
litellm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
litellm/integrations/file_server/: file_server_logger.py
litellm/integrations/langfuse/: langfuse.py
litellm/litellm_core_utils/: initialize_dynamic_callback_params.py  streaming_handler.py
litellm/llms/custom_httpx/: llm_http_handler.py
litellm/proxy/: _types.py  keycloak_auth.py  proxy_config.yaml  proxy_server.py  test_keycloak_auth_unit.py
litellm/proxy/auth/: auth_checks.py  auth_utils.py
litellm/proxy/hooks/: __init__.py  parallel_request_limiter.py  parallel_request_limiter_v2.py  parallel_request_limiter_v2_enhanced_rate_limit.py  parallel_request_limiter_v2_rpd.py  parallel_request_limiter_v3.py
litellm/proxy/management_endpoints/: rate_limit_management_endpoints.py
scripts/: sync_poetry_to_pep621.py
temp_migrations/20250713092118_initial/: README.md
temp_migrations/20250726055642_initial/: README.md
temp_migrations/20250803060142_initial/: README.md
temp_migrations/20251012022926_initial/: README.md
temp_migrations/20251024085258_initial/: README.md
temp_migrations/20251206143234_initial/: README.md
temp_migrations/20260108224624_initial/: README.md
tests/: UV_SUPPORT_CHANGES.md
tests/proxy_unit_tests/: test_user_api_key_auth.py
tests/test_litellm/integrations/: test_file_server_logger.py
tests/test_litellm/litellm_core_utils/: test_buffered_stream.py
tests/test_litellm/proxy/auth/: test_auth_checks.py
